--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -23,6 +23,7 @@
       crossorigin="anonymous"
     ></script>
     <link rel="stylesheet" href="/stylesheets/styles.css" />
+    <link rel="shortcut icon" href="/images/icono.png" type="image/x-icon" />
     <script>
       // Resetar el sessionStorage luego de un logout
       sessionStorage.clear();
